syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.tools.oeminfo";
option java_outer_classname = "OemInfoServiceRpc";
option objc_class_prefix = "OISR";

service OemInfoService {
    rpc GetOemInfoByOemId (OemInfoQuery) returns (OemInfoResult) {
    }
}

message OemInfoQuery {
    int64 oemId = 1;
}

message OemInfoResult{
   repeated OemInfoItem oemInfoItems = 1;
}

message OemInfoItem{
  string fieldName = 1; //字段名
  string fieldValue = 2;//字段值
}